Move index.html file

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <title>Help Assist Her</title>
 </head>
 <body>
-    <div id="app">Loading Help Assist Her</div>
-    <script src="bundle.js"></script>
-
-
-</body></html>
+    <div id='app'>Loading Help Assist Her</div>
+    <script src='bundle.js'></script>
+</body>
+</html>
