backgroung image set

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height:100%; width:100%">
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Help Assist Her</title>
 </head>
-<body style="margin: 0">
-    <div id='root'>Loading Help Assist Her</div>
+<body style="margin: 0; height:100%; width:100%;
+    background-image: url('./img/background.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;" >
+    <div id='root' style="height:100%; width:100%">Loading Help Assist Her</div>
     <script src='/bundle.js'></script>
 </body>
 </html>
