--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,32 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Help Assist Her</title>
 </head>
-<body style="margin: 0">
+<body style="margin: 0;">
+  <ul style="position:absolute;
+  top: 20%;
+  margin:0%;
+  padding: 0%;
+  width: 100%;
+  list-style: none;
+  text-align: center;
+	color: #FFFFFF;
+	font-family: 'Century Gothic';
+	font-weight: bold;">
+  <li>
+  <img src="./img/logo-white.png" alt="Help Assist Her logo"
+    style="height: 67.07px;
+    width: 338.23px;">
+  </li>
+    <li style="
+	font-size: 72px;
+	letter-spacing: 3px;
+	line-height: 88px;">Information Database</li>
+  <li style="
+	font-size: 24px;
+	letter-spacing: 0.33px;
+	line-height: 29px;
+  margin-top: 45px">Sign in to start helping our sister out!</li>
+</ul>
     <div id='root'>Loading Help Assist Her</div>
     <script src='/bundle.js'></script>
 </body>
